EmberCLI tutorial finished

--- a/app/styles/_ect.scss
+++ b/app/styles/_ect.scss
@@ -173,3 +173,6 @@ $ul-li-bg-color-four: hsla(287, 100%, 50%, 0.3);
 	width: 185px;
 	border: 2px solid darken($ect-header-color, 75%);
 }
+.middle_setup {
+	text-align: center;
+}
