--- a/app/templates/ember-tutorial/addons.hbs
+++ b/app/templates/ember-tutorial/addons.hbs
@@ -2,9 +2,36 @@
 	<div id="ECT_header">
 		<h1>It's add-ons time!</h1>
 	</div>
-	<div id="ECT_main" class="container">
-		<section>
-			<p>TODO</p>
+	<div id="ECT_main">
+		<section class="container">
+			<p>By now your live website is quite simple, yet working like a charm! 
+			so, before going ahead and creating wonderful content, you should 
+			think about these three handy add-ons:</p>
+		</section>
+	<div class="middle_setup container-fluid">
+			<div class="row">
+				<div class="col-md-4">
+					<h2><a href="https://github.com/kimroen/ember-cli-document-title" target="_blank">EmberCLI Document Title</a></h2>
+					<p>Managing page title with this little fella is quite handy! </p>
+					<p>To use it simply add <code>title: "xxx"</code> to your route and that's about it... 
+					However, there is also the option use dynamic segment title 
+					which would be quite useful if you using Ember Data.</p>
+				</div>
+				<div class="col-md-4">
+					<h2><a href="https://github.com/aexmachina/ember-cli-sass" target="_blank">EmberCLI SASS</a></h2>
+					<p>Do I need to say anything other than you will be able to use SASS and SCSS on your project?</p>
+					<p>If you are not a SASS connoisseur, then checkout my {{#link-to 'sassTutorial.index'}}SASS Tutorial{{/link-to}}!</p>
+				</div>
+				<div class="col-md-4">
+					<h2><a href="https://github.com/lifegadget/ember-cli-bootstrap-sassy" target="_blank">EmberCLI Bootstrap Sassy</a></h2>
+					<p>If you want Bootstrap on your project, then this addon is the way to go!</p>
+					<p>This website uses it, and oh boy it is handy when it comes to reliability and maintenance! </p>
+				</div>
+			</div>
+	</div>
+		<section class="container middle_setup">
+			<p><strong>There are many other addons around, so you can check out the 
+			{{#link-to 'emberTutorial.more'}}more{{/link-to}} section for more information!</strong></p>
 		</section>
 	</div>
 </div>
