--- a/app/templates/ember-tutorial/installation/ubuntu-virtual-box.hbs
+++ b/app/templates/ember-tutorial/installation/ubuntu-virtual-box.hbs
@@ -74,7 +74,8 @@ This will make the rest of the tutorial focused on actual content rather than ge
 </ol>
 <p>Now the best part! run <code>ember server</code>, open a browser and go to localhost:4200. Does the Index of this website and terminal looks like the screenshoot below?</p>
 <a target="_blank" href="http://imgur.com/gQOjAZm"><img height=300 src="http://i.imgur.com/gQOjAZm.png" title="source: imgur.com" /></a>
-<p>Does it? If so, then Hooray! press CTRL + C on the terminal to close the server and move to the next section... Otherwise, Google the problem you are having as this guide has been tested quite a few times in order to make sure that the commands work.</p>
+<p>Does it? If so, then Hooray! press CTRL + C on the terminal to close the server and move to the next section... Otherwise, Google the problem you are having as this guide 
+has been tested quite a few times in order to make sure that the commands work.</p>
 {{/if}}
 <div class="ul_li_colored_1 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_3}}</div>
 </section>
