--- a/app/templates/ember-tutorial/more.hbs
+++ b/app/templates/ember-tutorial/more.hbs
@@ -1,10 +1,16 @@
 <div class="ECT_BG">
 	<div id="ECT_header">
-		<h1>Want to know more about Ember CLI and Ember.js?</h1>
+		<h1>More about EmberCLI</h1>
 	</div>
 	<div id="ECT_main" class="container">
 		<section>
-			<p>TODO</p>
+			<p>If you are the type of person who learns by example, then feel free to check my Github Page projects. Otherwise, give the following websites a look:</p>
+			<ul>
+				<li><strong><a href="https://www.emberaddons.com/">Ember Addons</a>:</strong> Instead of reinventing the wheel, just search for a solution on this website instead!</li>
+				<li><strong><a href="http://www.ember-cli-mirage.com/">EmberCLI Mirage</a>:</strong> A great mock server tool that allows you to focus more on the frontend experience.</li>
+				<li><strong><a href="https://github.com/firebase/emberFire">Ember Fire</a>:</strong> Make use of Firebase as the backend experience for your app!</li>
+				<li><strong><a href="https://github.com/thoughtbot/ember-cli-rails">Ember-cli-rails</a>:</strong>If you like Rails as the backend, then give Ember-cli-rails a try.</li>
+			</ul>
 		</section>
 	</div>
 </div>
