--- a/app/templates/ember-tutorial/installation.hbs
+++ b/app/templates/ember-tutorial/installation.hbs
@@ -4,8 +4,16 @@
 		<section>
 		<p>This part of the tutorial will be rather long, but at the end of the installation you will have a live website!</p>
 		<p>For the sake of keeping track how far you are through this section of the guide, I made available a progress bar:</p>
-		<section id="progressBarBase">
-			<div id="progressBar">
+		<section class="progressBarStepsBase">
+			<div class="progressBar">
+				<div class="colored_1 colored_section_end">Steps 1-3</div>
+				<div class="colored_2 colored_section_end">Steps 4-6<</div>
+				<div class="colored_3 colored_section_end">Steps 7-9<</div>
+				<div class="colored_4">Steps 9-12<</div>
+			</div>
+		</section>
+		<section class="progressBarBase">
+			<div class="progressBar">
 				
 				{{! checkValues}}
 				
