--- a/app/styles/_globals.scss
+++ b/app/styles/_globals.scss
@@ -4,7 +4,7 @@
 // Bootstrap
 $navbar-default-color: hsla(242, 100%, 7%, 1);
 $navbar-default-bg: hsla(183, 100%, 67%, 0.81);
-$navbar-default-border: hsla(202, 58%, 14%, 0.8);
+$navbar-default-border: transparent;
 $navbar-default-link-color: hsla(202, 58%, 14%, 0.9);
 $navbar-default-link-hover-color: hsla(202, 58%, 14%, 0.9);
 $navbar-default-link-hover-bg: darken($navbar-default-bg, 20%);
