--- a/app/templates/ember-tutorial/installation.hbs
+++ b/app/templates/ember-tutorial/installation.hbs
@@ -6,10 +6,10 @@
 		<p>For the sake of keeping track how far you are through this section of the guide, I made available a progress bar:</p>
 		<section class="progressBarStepsBase">
 			<div class="progressBar">
-				<div class="colored_1 colored_section_end">Steps 1-3</div>
-				<div class="colored_2 colored_section_end">Steps 4-6<</div>
-				<div class="colored_3 colored_section_end">Steps 7-9<</div>
-				<div class="colored_4">Steps 9-12<</div>
+				<div class="colored_1 colored_section_end">Steps<br><strong>1-3</strong></div>
+				<div class="colored_2 colored_section_end">Steps<br><strong>4-6</strong></div>
+				<div class="colored_3 colored_section_end">Steps<br><strong>7-9</strong></div>
+				<div class="colored_4">Steps<br><strong>9-12</strong></div>
 			</div>
 		</section>
 		<section class="progressBarBase">
