--- a/app/templates/ember-tutorial/installation/github.hbs
+++ b/app/templates/ember-tutorial/installation/github.hbs
@@ -18,7 +18,7 @@ initializing the repo with a README, no .gitignore and a license that you want.
 After you create the repo, you will see a SSH link which you need to save it 
 somewhere as we will soon use it on the next section.</p>
 {{/if}}
-<div class="ul_li_colored_2 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_4}}</div>
+<div class="ul_li_colored_2 ember_confirmation"><label>Section complete?</label>  {{input type="checkbox" checked=emberTutorial.checkValue_4}}</div>
 </section>
 <h3><strong>Step 5 - </strong>Setting up your project</h3>
 <section>
@@ -52,7 +52,7 @@ If so, use <code>cd xxxxxx</code> and use <code>git status</code>.
 If your output is like below, then you are ready for the next section:</p>
 <p><a href="http://imgur.com/z89eekm" target="_blank"><img height=300 src="http://i.imgur.com/z89eekm.png" title="source: imgur.com" /></a></p>
 {{/if}}
-<div class="ul_li_colored_2 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_5}}</div>
+<div class="ul_li_colored_2 ember_confirmation"><label>Section complete?</label> {{input type="checkbox" checked=emberTutorial.checkValue_5}}</div>
 </section>
 <h3><strong>Step 6 - </strong>How to use Git & Github</h3>
 <section>
@@ -124,5 +124,5 @@ we should keep it as easy as possible for now.</p>
 </ol>
 <p>If you are still having issues, then check out how your repo should like through this <a href="https://github.com/Deovandski/DeoEmberCliGuide/tree/595de5b62a899f311980a99b4e489392802d34a3" target="_blank">link</a>.</p>
 {{/if}}
-<div class="ul_li_colored_2 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_6}}</div>
+<div class="ul_li_colored_2 ember_confirmation"><label>Section complete?</label>  {{input type="checkbox" checked=emberTutorial.checkValue_6}}</div>
 </section>
