--- a/app/templates/ember-tutorial/installation/heroku.hbs
+++ b/app/templates/ember-tutorial/installation/heroku.hbs
@@ -29,7 +29,7 @@ To https://git.heroku.com/deo-ember-cli-tutorial.git
 Your website is now live at the https address! Congratulations! However, 
 this is not the end as you need to hook it up to Github for automatic deployment.</p>
 {{/if}}
-<div class="ul_li_colored_4 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_10}}</div>
+<div class="ul_li_colored_4 ember_confirmation"><label>Section complete?</label>  {{input type="checkbox" checked=emberTutorial.checkValue_10}}</div>
 </section>
 <h3><strong>Step 11 - </strong>Hook Github Project</h3>
 <section>
@@ -48,7 +48,7 @@ having a production branch where that branch is the one being deployed to heroku
 you may have some caching issues which can easily be resolved with the 
 instructions given by the <a href="https://github.com/tonycoco/heroku-buildpack-ember-cli" target="_blank">Ember Cli Herokupack</a>.</p>
 {{/if}}
-<div class="ul_li_colored_4 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_11}}</div>
+<div class="ul_li_colored_4 ember_confirmation"><label>Section complete?</label> {{input type="checkbox" checked=emberTutorial.checkValue_11}}</div>
 </section>
 <h3><strong>Step 12 - </strong>Live Website test </h3>
 <section>
@@ -60,5 +60,5 @@ badges are working and website is live, then it is now time for you to
 complete the section and check out the surprise below where you will 
 also be taken to the next part of the guide! </p>
 {{/if}}
-<div class="ul_li_colored_4 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_12}}</div>
+<div class="ul_li_colored_4 ember_confirmation"><label>Section complete?</label> {{input type="checkbox" checked=emberTutorial.checkValue_12}}</div>
 </section>
