--- a/app/templates/ember-tutorial/installation/testing.hbs
+++ b/app/templates/ember-tutorial/installation/testing.hbs
@@ -49,7 +49,7 @@ if your project does not match the picture below:</p>
 <a href="http://imgur.com/qNZ0zS8" target="_blank"><img height=300 src="http://i.imgur.com/qNZ0zS8.png" title="source: imgur.com" /></a>
 <p>Ready to go? Then let's move on to Step 8!</p>
 {{/if}}
-<div class="ul_li_colored_3 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_7}}</div>
+<div class="ul_li_colored_3 ember_confirmation"><label>Section complete?</label>  {{input type="checkbox" checked=emberTutorial.checkValue_7}}</div>
 </section>
 <h3><strong>Step 8 - </strong>TravisCI</h3>
 <section>
@@ -103,7 +103,7 @@ script:
   then look into how Markdown is <a href="https://guides.github.com/features/mastering-markdown/" target="_blank">used</a>.</li>
 </ol>
 {{/if}}
-<div class="ul_li_colored_3 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_8}}</div>
+<div class="ul_li_colored_3 ember_confirmation"><label>Section complete?</label>  {{input type="checkbox" checked=emberTutorial.checkValue_8}}</div>
 </section>
 <h3><strong>Step 9 - </strong>CodeClimate, Hakiri and Gemnasium</h3>
 <section>
@@ -202,5 +202,5 @@ if (typeof exports === 'undefined') {
 If your repo does look like the <a href="https://github.com/Deovandski/DeoEmberCliGuide" target="_blank">example</a> one, 
 then it is time for Heroku! </p>
 {{/if}}
-<div class="ul_li_colored_3 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_9}}</div>
+<div class="ul_li_colored_3 ember_confirmation"><label>Section complete?</label>  {{input type="checkbox" checked=emberTutorial.checkValue_9}}</div>
 </section>
