--- a/app/templates/ember-tutorial/installation/ubuntu-virtual-box.hbs
+++ b/app/templates/ember-tutorial/installation/ubuntu-virtual-box.hbs
@@ -27,7 +27,7 @@ option for a quick and painless install (which only handles the created virtual 
 <p><a href="http://imgur.com/NyqsCXa" target="_blank"><img height=300px src="http://i.imgur.com/NyqsCXa.png" title="source: imgur.com" /></a></p>
 <p>If not, search for possible troubleshoots on Google (or Bing if that's your thing because it is mine due to the reward points.)</p>
 {{/if}}
-<div class="ul_li_colored_1 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_1}}</div>
+<div class="ul_li_colored_1 ember_confirmation"><label>Section complete?</label> {{input type="checkbox" checked=emberTutorial.checkValue_1}}</div>
 </section>
 <h3><strong>Step 2 - </strong>Overall Dependencies</h3>
 <section>
@@ -57,7 +57,7 @@ option for a quick and painless install (which only handles the created virtual 
 <p>5. Run <code>ember -v</code> and you should get a number for response. If so, restart the machine as we are now going to the project dependencies:</p>
 <p></p>
 {{/if}}
-<div class="ul_li_colored_1 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_2}}</div>
+<div class="ul_li_colored_1 ember_confirmation"><label>Section complete?</label> {{input type="checkbox" checked=emberTutorial.checkValue_2}}</div>
 </section>
 <h3><strong>Step 3 - </strong>Project Dependencies</h3>
 <section>
@@ -77,5 +77,5 @@ This will make the rest of the tutorial focused on actual content rather than ge
 <p>Does it? If so, then Hooray! press CTRL + C on the terminal to close the server and move to the next section... Otherwise, Google the problem you are having as this guide 
 has been tested quite a few times in order to make sure that the commands work.</p>
 {{/if}}
-<div class="ul_li_colored_1 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_3}}</div>
+<div class="ul_li_colored_1 ember_confirmation"><label>Section complete?</label> {{input type="checkbox" checked=emberTutorial.checkValue_3}}</div>
 </section>
