DSP Index sidebar implemented

--- a/app/templates/deo-space-program/index.hbs
+++ b/app/templates/deo-space-program/index.hbs
@@ -5,10 +5,10 @@
 		<div id="logo"><img src="http://i.imgur.com/poXwUfq.png" alt="Deo's Space Program Logo" width="50%" /></div>
 	</div>
 	<div class="container-fluid">
-		<div class="row">
-			<div class="col-sm-2 col-md-1">
-				<ul class="nav nav">
-					<li class="active">{{#link-to 'deoSpaceProgram.index' id="active"}}Home{{/link-to}}</li>
+		<div class="row-fluid">
+			<div class="col-sm-3 col-md-2 sidebar">
+				<ul class="nav nav_sidebar">
+					<li class="nav_sidebar_active">{{#link-to 'deoSpaceProgram.index' id="active"}}Home{{/link-to}}</li>
 					<li>{{#link-to 'deoSpaceProgram.history'}}History{{/link-to}}</li>
 					<li>{{#link-to 'deoSpaceProgram.kerbals'}}Kerbals{{/link-to}}</li>
 					<li>{{#link-to 'deoSpaceProgram.missions'}}Missions{{/link-to}}</li>
@@ -17,7 +17,7 @@
 					<li>{{#link-to 'deoSpaceProgram.copyright'}}Copyright{{/link-to}}</li>
 				</ul>
 			</div>
-			<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+			<div class="col-sm-9 col-md-10 main" >
 				<div id="DSP_main">
 					<section>
 						<article class="intro">
