DSP refactor complete.

--- a/app/styles/_dpw.scss
+++ b/app/styles/_dpw.scss
@@ -27,11 +27,13 @@
 		letter-spacing: 1px;
 	}
 }
-
+#logo{
+	padding-bottom: 30px;
+}
 // #DPW_main Definitions
 
 #DPW_main {
-    padding: 25px;
+    padding: 15px;
     background-clip: content-box;
 	bottom:50px;
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
