--- a/app/templates/deo-space-program/index.hbs
+++ b/app/templates/deo-space-program/index.hbs
@@ -8,7 +8,7 @@
 		<div class="row-fluid">
 			<div class="col-sm-3 col-md-2 sidebar">
 				<ul class="nav nav_sidebar">
-					<li class="nav_sidebar_active">{{#link-to 'deoSpaceProgram.index' id="active"}}Home{{/link-to}}</li>
+					<li id="nav_link_active">{{#link-to 'deoSpaceProgram.index' disabled=true}}Home{{/link-to}}</li>
 					<li>{{#link-to 'deoSpaceProgram.history'}}History{{/link-to}}</li>
 					<li>{{#link-to 'deoSpaceProgram.kerbals'}}Kerbals{{/link-to}}</li>
 					<li>{{#link-to 'deoSpaceProgram.missions'}}Missions{{/link-to}}</li>
