DSP LiftOff calculator partially complete

--- a/app/templates/deo-space-program/copyright.hbs
+++ b/app/templates/deo-space-program/copyright.hbs
@@ -11,9 +11,8 @@
 					<li>{{#link-to 'deoSpaceProgram.index'}}Home{{/link-to}}</li>
 					<li>{{#link-to 'deoSpaceProgram.history'}}History{{/link-to}}</li>
 					<li>{{#link-to 'deoSpaceProgram.kerbals'}}Kerbals{{/link-to}}</li>
-					<li>{{#link-to 'deoSpaceProgram.missions'}}Missions{{/link-to}}</li>
-					<li>{{#link-to 'deoSpaceProgram.achievements'}}Achievements{{/link-to}}</li>
-					<li>{{#link-to 'deoSpaceProgram.future'}}Future{{/link-to}}</li>
+					<li><a href="http://www.ksp-players.com/en/logbook/Deovandski/achievements" target="_blank">Achievements</a></li>
+					<li>{{#link-to 'deoSpaceProgram.liftoffCalculator'}}Liftoff Calculator{{/link-to}}</li>
 					<li id="nav_link_active">{{#link-to 'deoSpaceProgram.copyright' disabled=true}}Copyright{{/link-to}}</li>
 				</ul>
 			</div>
@@ -21,7 +20,7 @@
 				<div id="DSP_main">
 					<section>
 					<p>All info about copyright info will be add on the next iteration... If you are the owner of one of the Miku pictures that I made use of, please contact on FB or Twitter so that I can write down your contact. This website is non-commercial and non-profit!</p>
-					<table>
+					<table class="copyright_table">
 					<caption>Flag Image Sources</caption>
 					<tr id="table_header">
 					<th scope="col">Image</th>
