--- a/app/templates/deo-space-program/history.hbs
+++ b/app/templates/deo-space-program/history.hbs
@@ -11,9 +11,8 @@
 					<li>{{#link-to 'deoSpaceProgram.index'}}Home{{/link-to}}</li>
 					<li id="nav_link_active">{{#link-to 'deoSpaceProgram.history' disabled=true}}History{{/link-to}}</li>
 					<li>{{#link-to 'deoSpaceProgram.kerbals'}}Kerbals{{/link-to}}</li>
-					<li>{{#link-to 'deoSpaceProgram.missions'}}Missions{{/link-to}}</li>
-					<li>{{#link-to 'deoSpaceProgram.achievements'}}Achievements{{/link-to}}</li>
-					<li>{{#link-to 'deoSpaceProgram.future'}}Future{{/link-to}}</li>
+					<li><a href="http://www.ksp-players.com/en/logbook/Deovandski/achievements" target="_blank">Achievements</a></li>
+					<li>{{#link-to 'deoSpaceProgram.liftoffCalculator'}}Liftoff Calculator{{/link-to}}</li>
 					<li>{{#link-to 'deoSpaceProgram.copyright'}}Copyright{{/link-to}}</li>
 				</ul>
 			</div>
@@ -21,6 +20,15 @@
 				<div id="DSP_main">
 					<section>
 						<article class="intro"></article>
+					</section>
+					<section>
+							<article>
+							<h3>First Low Kerbin Orbit (LKO)</h3>
+							<p>Where is all started... The lack of decent technology, and even basic ones like solar panels, made this mission to be quite focused on just getting to LKO and back to the ground as fast as possible. It was so fast, that snacks were not brought aboard!</p>
+							<p>Onto the technical review, due to the massive solid booster at stage 3, all horizontal speed had be added later on due to how uncontrollable the vessel would be come while achieving speed higher than Mach 0.5 during lower altitudes (21km.)
+							Stage 2 had several advantages when it came to control, but the Delta-v of that stage left control center in almost a panic state due to how little fuel we would have for a return... Luckily, 45m/s Vac Delta-v was sufficient to bring back our brave Jebediah!</p>
+							<div><iframe width="560" height="315" src="https://www.youtube.com/embed/XloMiHAWNzo" frameborder="0" allowfullscreen></iframe></div>
+						</article>
 					</section>
 				</div>
 			</div>
