--- a/app/styles/_dsp.scss
+++ b/app/styles/_dsp.scss
@@ -95,27 +95,11 @@ $dsp-background-color: hsla(190, 70%, 60%, 0.97);
 		display: block;
 		list-style-type: none;
 	}
-	table {
-		caption {
-			text-align: center;
-			margin: 5px;
-		}
-		#table_header {
-			th {
-				text-align: center;
-			}
-		}
-		margin-left: auto;
-		margin-right: auto;   
-		tr {
-			td {
-				height: 250px;
-				width: 250px;
-			}
-		}
-	}
 	.link_info {
 		text-align: center;
+	}
+	a {
+		color: hsla(33, 100%, 24%, 1);
 	}
 }
 
@@ -176,4 +160,71 @@ $dsp-background-color: hsla(190, 70%, 60%, 0.97);
 }
 
 // Specific Page Definitons
-
+.liftoff_table{
+	caption {
+		text-align: center;
+		margin: 1px;
+		background-color: hsla(33, 70%, 61%, 1);
+		color: #000;
+		border-style: solid;
+		border-width: 2px 2px 0px 2px;
+	}
+	margin-left: auto;
+	margin-right: auto;   
+	tr {
+		th {
+			height: 50px;
+			text-align: center;
+			border-style: solid;
+			border-width: 2px;
+		}
+		td {
+			text-align: center;
+			color: #000;
+			border-style: solid;
+			border-width: 1px;
+			height: 50px;
+			width: auto;
+		}
+	}
+	margin-bottom: 20px;
+	margin-top: 10px;
+}
+.copyright_table {
+	caption {
+		text-align: center;
+		margin: 5px;
+	}
+	#table_header {
+		th {
+			text-align: center;
+		}
+	}
+	margin-left: auto;
+	margin-right: auto;   
+	tr {
+		td {
+			height: 250px;
+			width: 250px;
+		}
+	}
+}
+.dsp_select_label{
+	float:left;
+	margin-right:5px;
+}
+.dsp_select{
+	width:100px;
+	float:left;
+}
+.dsp_back_top{
+	text-align: center;
+	label{
+		a{
+			border-style: solid;
+			border-width: 1px;
+			padding: 3px;
+			background: lighten($dsp-background-color, 20%);
+		}
+	}
+}
