--- a/app/templates/deo-space-program/kerbals.hbs
+++ b/app/templates/deo-space-program/kerbals.hbs
@@ -11,9 +11,8 @@
 					<li>{{#link-to 'deoSpaceProgram.index'}}Home{{/link-to}}</li>
 					<li>{{#link-to 'deoSpaceProgram.history'}}History{{/link-to}}</li>
 					<li id="nav_link_active">{{#link-to 'deoSpaceProgram.kerbals' disabled=true}}Kerbals{{/link-to}}</li>
-					<li>{{#link-to 'deoSpaceProgram.missions'}}Missions{{/link-to}}</li>
-					<li>{{#link-to 'deoSpaceProgram.achievements'}}Achievements{{/link-to}}</li>
-					<li>{{#link-to 'deoSpaceProgram.future'}}Future{{/link-to}}</li>
+					<li><a href="http://www.ksp-players.com/en/logbook/Deovandski/achievements" target="_blank">Achievements</a></li>
+					<li>{{#link-to 'deoSpaceProgram.liftoffCalculator'}}Liftoff Calculator{{/link-to}}</li>
 					<li>{{#link-to 'deoSpaceProgram.copyright'}}Copyright{{/link-to}}</li>
 				</ul>
 			</div>
