--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -39,9 +39,8 @@
 							<li role="separator" class="divider"></li>
 							<li>{{#link-to 'deoSpaceProgram.history'}}History{{/link-to}}</li>
 							<li>{{#link-to 'deoSpaceProgram.kerbals'}}Kerbals{{/link-to}}</li>
-							<li>{{#link-to 'deoSpaceProgram.missions'}}Missions{{/link-to}}</li>
-							<li>{{#link-to 'deoSpaceProgram.achievements'}}Achievements{{/link-to}}</li>
-							<li>{{#link-to 'deoSpaceProgram.future'}}Future{{/link-to}}</li>
+							<li><a href="http://www.ksp-players.com/en/logbook/Deovandski/achievements" target="_blank">Achievements</a></li>
+							<li>{{#link-to 'deoSpaceProgram.liftoffCalculator'}}Liftoff Calculator{{/link-to}}</li>
 							<li>{{#link-to 'deoSpaceProgram.copyright'}}Copyright{{/link-to}}</li>
 						</ul>
 					</li>
